Inclusão do Spark Measure

--- a/notebooks/teste.ipynb
+++ b/notebooks/teste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "69270f6c",
    "metadata": {},
    "outputs": [],
@@ -11,19 +11,6 @@
     "findspark.init()\n",
     "\n",
     "from pyspark.sql import SparkSession"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "5b45c8af-8b4d-4ad3-ae40-90295d1d9501",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "# Cria o diretório de logs se ele não existir\n",
-    "log_dir = \"./logs/events\"\n",
-    "os.makedirs(log_dir, exist_ok=True)"
    ]
   },
   {
@@ -36,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c9319c86-54e0-4e48-9e19-ab4f32d0c3f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "    .appName(\"JupyterSparkExample\") \\\n",
-    "    .master(\"spark://spark:7077\") \\\n",
+    "    .master(\"spark://master:7077\") \\\n",
     "    .config(\"spark.eventLog.enabled\", \"true\") \\\n",
     "    .config(\"spark.eventLog.dir\", \"file:///home/jovyan/work/logs\") \\\n",
     "    .getOrCreate()"
@@ -87,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f37af223-1c65-4655-90d0-7c0f31e83761",
    "metadata": {},
    "outputs": [],
@@ -98,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "19806373-12b6-44e7-b91b-b01e3014dcdf",
    "metadata": {},
    "outputs": [],
@@ -108,32 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b385df48-ab8e-48f9-aa61-ab6337ba391e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+---+\n",
-      "| Name|Age|\n",
-      "+-----+---+\n",
-      "|Alice| 34|\n",
-      "|  Bob| 45|\n",
-      "|Cathy| 29|\n",
-      "+-----+---+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "128db74c-0a90-4e46-8d48-4dc3ea98e4a4",
    "metadata": {},
    "outputs": [],
@@ -143,25 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6953a4a9-5248-4bfd-ad94-2391f85bb0b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+-----+\n",
-      "|Age|count|\n",
-      "+---+-----+\n",
-      "| 34|    1|\n",
-      "| 29|    1|\n",
-      "| 45|    1|\n",
-      "+---+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_grouped.show()"
    ]
@@ -177,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "547f5b3a-21cc-4651-9a70-04f9afe1e9df",
    "metadata": {},
    "outputs": [],
