--- a/notebooks/teste.ipynb
+++ b/notebooks/teste.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "69270f6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import findspark\n",
-    "findspark.init()\n",
+    "import findspark  # type: ignore\n",
+    "findspark.init()  # type: ignore\n",
     "\n",
     "from pyspark.sql import SparkSession"
    ]
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c9319c86-54e0-4e48-9e19-ab4f32d0c3f0",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f37af223-1c65-4655-90d0-7c0f31e83761",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "19806373-12b6-44e7-b91b-b01e3014dcdf",
    "metadata": {},
    "outputs": [],
@@ -95,17 +95,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b385df48-ab8e-48f9-aa61-ab6337ba391e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---+\n",
+      "| Name|Age|\n",
+      "+-----+---+\n",
+      "|Alice| 34|\n",
+      "|  Bob| 45|\n",
+      "|Cathy| 29|\n",
+      "+-----+---+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "128db74c-0a90-4e46-8d48-4dc3ea98e4a4",
    "metadata": {},
    "outputs": [],
@@ -115,10 +130,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6953a4a9-5248-4bfd-ad94-2391f85bb0b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+\n",
+      "|Age|count|\n",
+      "+---+-----+\n",
+      "| 34|    1|\n",
+      "| 29|    1|\n",
+      "| 45|    1|\n",
+      "+---+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df_grouped.show()"
    ]
@@ -134,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "547f5b3a-21cc-4651-9a70-04f9afe1e9df",
    "metadata": {},
    "outputs": [],
