Ajuste de variavel de ambiente via arquivo .env

--- a/notebooks/teste.ipynb
+++ b/notebooks/teste.ipynb
@@ -3,6 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "86b10e83-fff2-4768-994b-dca9f3c1acc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Obter o caminho para os notebooks e logs a partir das variáveis de ambiente\n",
+    "import os\n",
+    "user_name = os.environ.get('USER_NAME', 'spark')\n",
+    "user_home = os.environ.get('USER_HOME', '/home/spark')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "69270f6c",
    "metadata": {},
    "outputs": [],
@@ -22,15 +35,28 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "fd8ab3b9-28ce-464a-95dc-1f891574a27a",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "26ef24d7-ff33-402a-88ea-1d99c119fde8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/06/16 13:01:18 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
+    "# Construir a sessão Spark\n",
     "spark = SparkSession.builder \\\n",
     "    .appName(\"JupyterSparkExample\") \\\n",
     "    .master(\"spark://spark-master:7077\") \\\n",
     "    .config(\"spark.eventLog.enabled\", \"true\") \\\n",
-    "    .config(\"spark.eventLog.dir\", \"file:///logs\") \\\n",
+    "    .config(\"spark.eventLog.dir\", f\"file://{user_home}/logs\") \\\n",
     "    .getOrCreate()"
    ]
   },
@@ -43,21 +69,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "ec5e2f32-c250-48b7-ab60-4120c1208504",
+   "cell_type": "raw",
+   "id": "a5f7e074-c389-4350-8cdd-7c24075a194f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/06/16 01:13:31 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
    "source": [
     "# se quiser executar o Spark em modo LOCAL usando todos os cores da CPU\n",
     "spark = SparkSession.builder \\\n",
@@ -84,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f37af223-1c65-4655-90d0-7c0f31e83761",
    "metadata": {},
    "outputs": [],
@@ -95,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "19806373-12b6-44e7-b91b-b01e3014dcdf",
    "metadata": {},
    "outputs": [],
@@ -105,39 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b385df48-ab8e-48f9-aa61-ab6337ba391e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+---+\n",
-      "| Name|Age|\n",
-      "+-----+---+\n",
-      "|Alice| 34|\n",
-      "|  Bob| 45|\n",
-      "|Cathy| 29|\n",
-      "+-----+---+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "128db74c-0a90-4e46-8d48-4dc3ea98e4a4",
    "metadata": {},
    "outputs": [],
@@ -147,25 +139,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6953a4a9-5248-4bfd-ad94-2391f85bb0b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+-----+\n",
-      "|Age|count|\n",
-      "+---+-----+\n",
-      "| 34|    1|\n",
-      "| 45|    1|\n",
-      "| 29|    1|\n",
-      "+---+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_grouped.show()"
    ]
@@ -181,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "547f5b3a-21cc-4651-9a70-04f9afe1e9df",
    "metadata": {},
    "outputs": [],
